--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -1,7 +1,6 @@
-# Insert chapter 2 title here
+# Viikko 1
 
-*Describe the work you have done this week and summarize your learning.*
+R-ohjelmistojen asennus, GitHub-tilin aktivointi ja GitHub Desktopin asennus.
 
-- Describe your work and results clearly. 
-- Assume the reader has an introductory course level understanding of writing and reading R code as well as statistical methods
-- Assume the reader has no previous knowledge of your data or the more advanced methods you are using  
+DataCampin avulla harjoittelin 2 harjoitussettiä R-ohjelmistokieltä.  
+
